Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33809

Bulk insert or DDL fails if a BLOB is too long

    XMLWordPrintable

Details

    Description

      As noted in MDEV-33585, there is a limit on how much data a single system call can write. On FreeBSD, Linux, and Microsoft Windows, this limit would be much smaller than the size of a BLOB that could be buffered in a 64-bit address space of the server process.

      Specifically, row_merge_write_blob_to_tmp_file() does not limit the size of a single os_file_write() request to at most 0x7fffff000 bytes, which is the limit on Linux.

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 4.5h
                  1d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.